--- a/app/src/main/res/layout/activity_sign_up_doctor.xml
+++ b/app/src/main/res/layout/activity_sign_up_doctor.xml
@@ -139,7 +139,7 @@
                         android:id="@+id/etSpecialization"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:inputType="number" />
+                        android:inputType="text" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
